--- a/linear_regression_household.ipynb
+++ b/linear_regression_household.ipynb
@@ -4,15 +4,179 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Bedroom</th>\n",
+       "      <th>Space</th>\n",
+       "      <th>Room</th>\n",
+       "      <th>Lot</th>\n",
+       "      <th>Tax</th>\n",
+       "      <th>Bathroom</th>\n",
+       "      <th>Garage</th>\n",
+       "      <th>Condition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>652.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>815.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>900.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>897.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>58.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1007.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>964.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1100.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1099.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Price  Bedroom   Space  Room   Lot     Tax  Bathroom  Garage  Condition\n",
+       "0   53.0      2.0   967.0   5.0  39.0   652.0       1.5     0.0        0.0\n",
+       "1   55.0      2.0   815.0   5.0  33.0  1000.0       1.0     2.0        1.0\n",
+       "2   56.0      3.0   900.0   5.0  35.0   897.0       1.5     1.0        0.0\n",
+       "3   58.0      3.0  1007.0   6.0  24.0   964.0       1.5     2.0        0.0\n",
+       "4   64.0      3.0  1100.0   7.0  50.0  1099.0       1.5     1.5        0.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a"
+    "import pandas as pd\n",
+    "import numpy as np #linear algebra library\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split \n",
+    "df = pd.read_csv(\"realest.csv\") \n",
+    "df.head() # display first 5 rows of the dataset, make sure everything went through correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Price        0\n",
+       "Bedroom      0\n",
+       "Space        0\n",
+       "Room         0\n",
+       "Lot          0\n",
+       "Tax          0\n",
+       "Bathroom     0\n",
+       "Garage       0\n",
+       "Condition    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(inplace = True)\n",
+    "df.isnull().sum()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
