correlation and training/test split

--- a/linear_regression_household.ipynb
+++ b/linear_regression_household.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "4   64.0      3.0  1100.0   7.0  50.0  1099.0       1.5     1.5        0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Price         1\n",
+       "Bedroom       1\n",
+       "Space        11\n",
+       "Room          1\n",
+       "Lot          11\n",
+       "Tax          10\n",
+       "Bathroom      1\n",
+       "Garage        1\n",
+       "Condition     1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum() # check for null values, sckit-learn does not accept null directly "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +178,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +186,191 @@
    "source": [
     "df.dropna(inplace = True)\n",
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Bedroom</th>\n",
+       "      <th>Space</th>\n",
+       "      <th>Room</th>\n",
+       "      <th>Lot</th>\n",
+       "      <th>Tax</th>\n",
+       "      <th>Bathroom</th>\n",
+       "      <th>Garage</th>\n",
+       "      <th>Condition</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.321623</td>\n",
+       "      <td>0.739074</td>\n",
+       "      <td>0.578310</td>\n",
+       "      <td>0.467262</td>\n",
+       "      <td>0.505958</td>\n",
+       "      <td>0.567729</td>\n",
+       "      <td>0.555242</td>\n",
+       "      <td>0.137773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bedroom</th>\n",
+       "      <td>0.321623</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.581410</td>\n",
+       "      <td>0.841807</td>\n",
+       "      <td>0.357425</td>\n",
+       "      <td>0.045922</td>\n",
+       "      <td>0.621555</td>\n",
+       "      <td>0.189651</td>\n",
+       "      <td>-0.116611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Space</th>\n",
+       "      <td>0.739074</td>\n",
+       "      <td>0.581410</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.761927</td>\n",
+       "      <td>0.422497</td>\n",
+       "      <td>0.609800</td>\n",
+       "      <td>0.598866</td>\n",
+       "      <td>0.407141</td>\n",
+       "      <td>0.079876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Room</th>\n",
+       "      <td>0.578310</td>\n",
+       "      <td>0.841807</td>\n",
+       "      <td>0.761927</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.499721</td>\n",
+       "      <td>0.142749</td>\n",
+       "      <td>0.767886</td>\n",
+       "      <td>0.285706</td>\n",
+       "      <td>0.039036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lot</th>\n",
+       "      <td>0.467262</td>\n",
+       "      <td>0.357425</td>\n",
+       "      <td>0.422497</td>\n",
+       "      <td>0.499721</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.202397</td>\n",
+       "      <td>0.421500</td>\n",
+       "      <td>0.154071</td>\n",
+       "      <td>-0.037464</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tax</th>\n",
+       "      <td>0.505958</td>\n",
+       "      <td>0.045922</td>\n",
+       "      <td>0.609800</td>\n",
+       "      <td>0.142749</td>\n",
+       "      <td>0.202397</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.018013</td>\n",
+       "      <td>0.420709</td>\n",
+       "      <td>-0.133850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bathroom</th>\n",
+       "      <td>0.567729</td>\n",
+       "      <td>0.621555</td>\n",
+       "      <td>0.598866</td>\n",
+       "      <td>0.767886</td>\n",
+       "      <td>0.421500</td>\n",
+       "      <td>0.018013</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.269352</td>\n",
+       "      <td>-0.005469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Garage</th>\n",
+       "      <td>0.555242</td>\n",
+       "      <td>0.189651</td>\n",
+       "      <td>0.407141</td>\n",
+       "      <td>0.285706</td>\n",
+       "      <td>0.154071</td>\n",
+       "      <td>0.420709</td>\n",
+       "      <td>0.269352</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.125645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Condition</th>\n",
+       "      <td>0.137773</td>\n",
+       "      <td>-0.116611</td>\n",
+       "      <td>0.079876</td>\n",
+       "      <td>0.039036</td>\n",
+       "      <td>-0.037464</td>\n",
+       "      <td>-0.133850</td>\n",
+       "      <td>-0.005469</td>\n",
+       "      <td>0.125645</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Price   Bedroom     Space      Room       Lot       Tax  \\\n",
+       "Price      1.000000  0.321623  0.739074  0.578310  0.467262  0.505958   \n",
+       "Bedroom    0.321623  1.000000  0.581410  0.841807  0.357425  0.045922   \n",
+       "Space      0.739074  0.581410  1.000000  0.761927  0.422497  0.609800   \n",
+       "Room       0.578310  0.841807  0.761927  1.000000  0.499721  0.142749   \n",
+       "Lot        0.467262  0.357425  0.422497  0.499721  1.000000  0.202397   \n",
+       "Tax        0.505958  0.045922  0.609800  0.142749  0.202397  1.000000   \n",
+       "Bathroom   0.567729  0.621555  0.598866  0.767886  0.421500  0.018013   \n",
+       "Garage     0.555242  0.189651  0.407141  0.285706  0.154071  0.420709   \n",
+       "Condition  0.137773 -0.116611  0.079876  0.039036 -0.037464 -0.133850   \n",
+       "\n",
+       "           Bathroom    Garage  Condition  \n",
+       "Price      0.567729  0.555242   0.137773  \n",
+       "Bedroom    0.621555  0.189651  -0.116611  \n",
+       "Space      0.598866  0.407141   0.079876  \n",
+       "Room       0.767886  0.285706   0.039036  \n",
+       "Lot        0.421500  0.154071  -0.037464  \n",
+       "Tax        0.018013  0.420709  -0.133850  \n",
+       "Bathroom   1.000000  0.269352  -0.005469  \n",
+       "Garage     0.269352  1.000000   0.125645  \n",
+       "Condition -0.005469  0.125645   1.000000  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr() # check which features have the largest effect on price  \n",
+    "\n",
+    "# space has the highest correlation with price"
    ]
   }
  ],
